k8s/base/ms-professional-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-professionals-service
  namespace: default
spec:
  selector:
    app: ms-consumers
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
