k8s/base/ms-profissionais-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-profissionais-service
  namespace: default
spec:
  selector:
    app: ms-profissionais
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
